--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<!CopyRight 2017>
+<!CopyRight 2017 Copy copy copy>
 <head>
+
 	<title>Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
