--- a/simple.html
+++ b/simple.html
@@ -20,7 +20,9 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>Git Training 2014</p>
 	</footer>
 </body>
+<footer>
+
 </html>
