Making change to simple2.html

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!CopyRight 2017 Copy copy copy>
 <head>
 
-	<title>Example Website</title>
+	<title>A very Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,11 +16,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just not sure
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy;ompany 2014</p>
 	</footer>
 </body>
 </html>
